# ZIED_NASRI_3CX

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zied/nasri/zied_nasri_3cx_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioRecorder.cpp  AudioRecorder.h  RecordingCallback.cpp  RecordingCallback.h  TheMostSillyEffect.cpp  TheMostSillyEffect.h
app/src/main/java/Audio/: WavEncoder.java
app/src/main/java/com/zied/nasri/zied_nasri_3cx_test/: BaseActivity.java  MainActivity.java  Utils.java
app/src/main/jni/: jni_audio_recorder.cpp  jni_audio_recorder.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zied/nasri/zied_nasri_3cx_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
